# homework-spbu

./: .gitignore  LICENSE  README.md  _config.yml  index.md  ruff.toml
.github/workflows/: python-test.yml  ruff.yml
src/c_homework/binaryRepresentation/: a.out  binaryRepr.c
src/c_homework/controlWork2/circleShift/: CMakeLists.txt  circleShift.c  circleShift.h  (+2 more)
src/c_homework/counting/: circularList.c  circularList.h  countingRhyme.c
src/c_homework/doubleHw/: main.c
src/c_homework/linkedList/: circularList.c  circularList.h  countingRhyme.c  linkedList.c  linkedList.h  sortingList.c  start.md
src/c_homework/optimalSorting/: optimalSorting.c  quickSort.c  quickSort.h  quickSort.s  start.md
src/c_homework/sortingList/: CMakeLists.txt  linkedList.c  linkedList.h  main.c  sortingList.c  sortingList.h  start.md
src/c_homework/sortingList/tests/: testSortingList.c  testSortingList.h
src/c_homework/stackImplementation/: CMakeLists.txt  brackedBalance.c  buildTutorial.md  shuntingYard.c  stack.c  stack.h
src/code_style_linter/: queens_permutation.py
src/control-work2-python/: priority_queue.py  test_priority_queue.py
src/currying_homework/: curry.py
src/depth_first_search/: dfs_alg.py
src/exam/1/: maxSum.c  monkeySort.c  otherPalindrom.c
src/huffman_code/: huffman.py  inp_data.txt  out.txt
src/introduction_to_git/: extended_gcd_alg.py
src/introduction_to_git2/: quick_sort.py
src/queen_permutation/: comb_solution.py  complexity.md  quickly_solution.py  recursion_solution.py
src/test_heap_sort/: heap_sort.py  other_sort.py  test_sort.py
(+6 files in other folders)
